# django-admin-json-editor

./: .editorconfig  .gitignore  .travis.yml  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
django_admin_json_editor/: __init__.py  admin.py
django_admin_json_editor/static/django_admin_json_editor/: editor.js  style.css
django_admin_json_editor/static/django_admin_json_editor/bootstrap/js/: bootstrap.bundle.min.js
django_admin_json_editor/static/django_admin_json_editor/jsoneditor/: jsoneditor.min.js
django_admin_json_editor/templates/django_admin_json_editor/: editor.html
example/: README.md  requirements.txt
example/app/: admin.py  models.py
example/app/migrations/: 0001_initial.py  0002_roles.py  0003_tag.py  0004_otherjsonmodel_relatedjsonmodel.py
example/project/: settings.py
examples/json_editor_example/: .gitignore  README.md  requirements.txt
examples/json_editor_example/app/: admin.py  models.py
examples/json_editor_example/project/: settings.py  urls.py  wsgi.py
json_editor/: __init__.py  admin.py
json_editor/static/django_json_editor/: style.css
json_editor/templates/django_json_editor/: django_json_editor.html
tests/: conftest.py  django_settings.py  test_widget.py
