[metadata]
description-file = README.md


[tool:pytest]
DJANGO_SETTINGS_MODULE=tests.django_settings
addopts= --doctest-modules --flake8 --nomigrations
testpaths = django_admin_json_editor tests

flake8-max-complexity = 10
flake8-max-line-length = 99

[isort]
force_single_line = false
import_heading_localfolder = true
